[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/scenes/models/Present.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scripts/present_pickup.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/star.png" type="Texture" id=3]
[ext_resource path="res://src/scenes/actors/ShadowStatic.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sound_effects/present.wav" type="AudioStream" id=5]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_diffuse_mode = 1
params_specular_mode = 4
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
gravity = Vector3( 0, 0, 0 )
radial_accel = 40.0

[sub_resource type="QuadMesh" id=2]

[node name="PresentPickup" type="Area"]
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource( 2 )

[node name="Present" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00481, 0 )
shape = SubResource( 1 )

[node name="Particles" type="Particles" parent="."]
material_override = SubResource( 3 )
emitting = false
lifetime = 0.3
one_shot = true
explosiveness = 1.0
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 2 )

[node name="ShadowStatic" parent="." instance=ExtResource( 4 )]
transform = Transform( 2, 0, 0, 0, -8.74228e-08, 1, 0, -2, -4.37114e-08, 0, 0, 0 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -16.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
